fix: 调整p标签的overflow

--- a/view/src/os/program/view-blog-program/viewer.css
+++ b/view/src/os/program/view-blog-program/viewer.css
@@ -32,6 +32,7 @@
 .articleviewer_content{
     padding:10px;
     color:#000;
+    overflow-x: hidden;
 }
 
 .articleviewer_metainfo_item{
